unpackaged/main/default/objects/Adverse_Actions__c/Adverse_Actions__c.object-meta.xml
<CustomObject>
    <label>Adverse Actions</label>
    <nameField>
        <label>Adverse Actions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adverse Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>