unpackaged/main/default/objects/Adverse_Actions__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Adverse Actions</relationshipLabel>
    <relationshipName>Adverse_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>