unpackaged/main/default/objects/Adverse_Actions__c/fields/Adverse_action_name__c.field-meta.xml
<CustomField>
    <fullName>Adverse_action_name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>