unpackaged/main/default/objects/Adverse_Actions__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Adverse Actions</relationshipLabel>
    <relationshipName>Adverse_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>