unpackaged/main/default/objects/Adverse_Actions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>Description__c</columns>
    <columns>Adverse_action_name__c</columns>
    <columns>Reason__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application__c</field>
        <operation>equals</operation>
        <value>APP-0001465681</value>
    </filters>
    <label>All</label>
</ListView>